--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ html,body {
     background-color: #ffff;
     color: #000;
     text-align: left;
+    font-size: 1rem;
 }
 
 .text-editor:focus{
@@ -35,4 +36,9 @@ html,body {
     flex: 1;
     padding: 0 50px;
     background-color: #f3f3f3;
+    font-size: 1rem;
+}
+
+.preview code {
+    background-color: #333;
 }
