--- a/index.css
+++ b/index.css
@@ -4,6 +4,10 @@ body {
     scroll-behavior: smooth;
 }
 
+* {
+    overflow: hidden;
+}
+
 html,body {
     width: 100%;
     height: 100%;
@@ -14,4 +18,128 @@ html,body {
 #editor {
     width: 100%;
     height: 100%;
+}
+
+#tutorial {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+
+    top:0;
+    left:0;
+
+    background-color: rgba(80, 80, 80, 0.65);
+    z-index: 99 !important;
+}
+
+#tutorial #main {
+    width: 80%;
+    height: 80%;
+    background-color: #ccc;
+
+    position: absolute;
+
+    top: 10%;
+    left: 10%;
+
+    z-index: 100 !important;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+#closep {
+    width: 100%;
+    height: 2.5%;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    border-bottom: 1px solid black;
+}
+
+#closep *{
+    padding: 0;
+    margin: 0;
+}
+
+#tt {
+    width: 100%;
+    height: 100%;
+    font-weight: bold;
+    user-select: none;
+}
+
+#close{
+    height: 100%;
+    width: auto;
+    background-color: transparent;
+    font-size: 1.2rem;
+    outline: none;
+    border: none;
+    color: black;
+    transition: all 0.25 ease-in-out;
+    margin-right: 1%;
+}
+
+#close:hover{
+    color: #06c;
+}
+
+#words {
+    width: 100%;
+    /*background-color: #06c;*/
+    flex-shrink: 0;
+    height: 92.5%;
+}
+
+#buttons {
+    border-top: 1px black solid;
+    height: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.arrows {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: black;
+    transition: all 0.15 ease-in-out;
+    z-index: 101 !important;
+    height: 100%;
+    width: 14%;
+    font-size: 2.25em;
+    padding: 0;
+}
+
+#left {text-align: left; margin-right: 34%;}
+#right {text-align: right; margin-left: 34%;}
+
+.arrows:hover {
+    color: #06c;
+}
+
+
+
+#words .main {
+    width: 100%;
+    height: 100%;
+    text-align: left;
+    justify-content: top;
+}
+
+#words .main *{
+    padding: 0;
+    margin: 0;
+    color: black;
+}
+
+#words .main .top {
+    border-bottom: 1px solid black;
+}
+
+.after::after{
+    clear:both;
+    content: '';
 }
